fix(ui): calculate window frame decoration height to resize windows precisely and completely prevent window scrollbars

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,9 +17,11 @@ body {
   min-height: 620px;
 }
 
+html:has(.dialog-window),
 body:has(.dialog-window) {
   min-width: 0;
   min-height: 0;
+  overflow: hidden !important;
 }
 
 button,
